--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -4,11 +4,16 @@ body {
     font-family: 'Raleway', Georgia, serif;
 }
 
+div.body h1, div.body h2, div.body h3, div.body h4, div.body h5, div.body h6,
+div.sphinxsidebar h3, div.sphinxsidebar h4, div.sphinxsidebar input, form input {
+    font-family: 'Raleway', Georgia, serif !important;
+}
+
 div.body p {
     hyphens: none;
 }
 
 h1.logo {
-    text-align: center;
+    text-align: center !important;
     font-size: 1.4rem;
 }
